@@ -1,5 +1,3 @@
 * Locking
 * Zlib
-* Field modification
 * Field moving
-* Fix non-moving foffs/&c.
