@@ -1,3 +1,12 @@
+2008-11-21   D. V. Wiebe <getdata@ketiltrout.net>  svn:240
+	* src/move.c: Added.
+	* src/foffs.c (_GD_ShiftFragment) src/endian.c (_GD_ByteSwapFragment): Call
+	_GD_MogrifyFile (in move.c) instead of handling the file translation
+	directly.
+
+	* src/encoding.c (_GD_RecodeFragment): Reset subencodings when not moving
+	files.
+
 2008-11-21   D. V. Wiebe <getdata@ketiltrout.net>  svn:239
 	* src/mod.c (dirfile_change_spec dirfile_mchange_spec): Added.
 
